assets/css/screen.css
/* Table of Contents
/* ------------------------------------------------------------

This is a development CSS file which is built to a minified
production stylesheet in assets/built/screen.css

1.  Global Styles
2.  Layout
3.  Special Templates
4.  Site Header
5.  Site Navigation
6.  Post Feed
7.  Single Post
  7.1. Post Byline
  7.2. Members Subscribe Form
  7.4. Related Posts
  7.5. Koenig Styles
  7.6  Comments
8.  Author Template
9.  Error Template
11. Site Footer
12. Dark Mode

*/

/* 1. Global - Set up the things
/* ---------------------------------------------------------- */

/* Import CSS reset and base styles */
@import "global.css";

:root {

    /* Colours */
    --color-green: #a4d037;
    --color-yellow: #fecd35;
    --color-red: #f05230;
    --color-darkgrey: #15171A;
    --color-midgrey: #738a94;
    --color-lightgrey: #f1f1f1;
    --color-secondary-text: #979797;
    --color-border: #e1e1e1;
    --color-wash: #e5eff5;
    --color-darkmode: #151719;
    
    /* Special Colors */
    --color-soft-red: #E74C3C;
    --color-soft-grey: #cccccc;

    /*
    An accent color is also set by Ghost itself in
    Ghost Admin > Settings > Brand

    --ghost-accent-color: {value};

    You can use this variable throughout your styles
     */

    /* Fonts */
    --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
    --font-serif: Georgia, Times, serif;
    --font-mono: Menlo, Courier, monospace;

}


/* 2. Layout - Page building blocks
/* ---------------------------------------------------------- */

.viewport {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}




.site-content {
    flex-grow: 1;
}

/* Full width page blocks */
.outer {
    position: relative;
    padding: 0 max(4vmin, 20px);
}

/* Centered content container blocks */
.inner {
    margin: 0 auto;
    max-width: 1200px;
    width: 100%;
}


/* 4. Site Header
/* ---------------------------------------------------------- */

.site-header {
    position: relative;
    color: #fff;
    background: var(--ghost-accent-color);
}

.site-header-cover {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.site-header-content {
    position: relative;
    z-index: 100;
    display: flex;
    align-items: center;
    padding-top: calc(19vmin + 44px);
    padding-bottom: 19vmin;
    text-align: center;
    color: var(--color-darkgrey);
}

.has-cover .site-header-content {
    min-height: 560px;
    background-color: var(--ghost-accent-color);
    color: #fff;
}

.site-header-content.left-aligned {
    padding-bottom: 0;
    text-align: left;
}

.has-cover .site-header-content.left-aligned {
    align-items: flex-end;
    padding-bottom: max(4vmin, 32px);
}

.site-header-content.no-content {
    padding-top: 0;
    padding-bottom: 2vmin;
}

.site-header-inner {
    position: relative;
}

.site-header-content.left-aligned .site-header-inner {
    align-items: flex-start;
}

.site-logo {
    flex-shrink: 0;
    margin: 0 auto;
    max-height: 120px;
}

.site-header-content.left-aligned .site-logo {
    margin-right: auto;
    margin-left: 0;
    max-height: 96px;
}

.site-title {
    z-index: 10;
    margin: 0;
    padding: 0;
    font-size: 5rem;
    font-weight: 800;
    text-shadow: 0.2rem 0.2rem black;
}

.has-serif-title .site-title {
    font-family: var(--font-serif);
}

.has-cover .site-title {
    font-size: 6rem;
}

.site-header-content.left-aligned .site-title {
    font-size: 4.4rem;
}

.has-cover .site-header-content.left-aligned .site-title {
    font-size: 4.6rem;
}

.site-description {
    display: inline-block;
    z-index: 10;
    max-width: 960px;
    font-size: 6rem;
    font-weight: 700;
    text-shadow: 0.1rem 0.1rem black;
    line-height: 1.1;
}

:is(.site-logo, .site-title) + .site-description {
    max-width: 640px;
    margin-top: 16px;
    font-size: 2.4rem;
    font-weight: 400;
    line-height: 1.4;
}

.site-logo + .site-description {
    margin-top: 20px;
}

.site-title + .site-description {
    color: var(--color-secondary-text);
}

.has-cover .site-description {
    letter-spacing: -0.005em;
    color: #fff;
}

.has-cover :is(.site-logo, .site-title) + .site-description {
    font-size: 2.4rem;
}

.has-cover .site-header-content.left-aligned :is(.site-logo, .site-title) + .site-description {
    font-size: 2.2rem;
}

@media (min-width: 992px) {
    .is-head-stacked.has-cover .site-header-content {
        padding-top: calc(19vmin + 120px);
    }
}

@media (max-width: 991px) {
    .site-header-content {
        padding-top: calc(19vmin + 32px);
    }
}

@media (max-width: 800px) {
    .has-cover .site-header-content {
        min-height: 240px;
    }
    .site-header-inner {
        gap: 16px;
    }
    .site-logo {
        max-width: 60%;
    }
    .site-title {
        font-size: 3.4rem !important;
    }
    .site-description {
        font-size: 2.2rem !important;
    }
    .site-logo + .site-description {
        margin-top: 12px !important;
    }
    .site-title + .site-description {
        margin-top: 12px !important;
    }
}

/* Parallax scrolling at index page */
.home-template .site-header-content {
  z-index: 1;
}

.home-template .site-header-content .site-header-cover {
  position: fixed;
}

.home-template .site-main {
  background-color: white;
  padding-top: 4rem;
  position: relative;
  z-index: 2;
  transition: transform 0.2s ease-out;
}

.home-template .site-footer {
  z-index: 2;
}

/* .home-template .site-footer {
  margin: 0;
} */

/* 5. Site Navigation
/* ---------------------------------------------------------- */

.gh-head {
    height: 88px;
    font-size: 1.6rem;
    line-height: 1.3em;
    background-color: #fff;
}

.has-cover:not(.home-template) .gh-head {
    background-color: var(--ghost-accent-color);
    color: #fff;
}
/* ... */

